--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,8 @@ a:focus {
 
 .bg-box img {
 
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 50%;
   -o-object-fit: cover;
   object-fit: cover;
 }
