:hammer: update project ishara

--- a/css/style.css
+++ b/css/style.css
@@ -795,15 +795,14 @@ a:focus {
 }
 
 .book_section .map_container {
-  width: 100%;
-  height: 345px;
+  width: auto;
+  height: auto;
   border-radius: 10px;
   overflow: hidden;
 }
 
 .book_section .map_container #googleMap {
-  height: 100%;
-  min-height: 100%;
+  
   width: 100%;
 }
 
