:hammer: update project ishara

--- a/css/style.css
+++ b/css/style.css
@@ -596,6 +596,7 @@ a:focus {
   padding: 25px;
 }
 
+/*AQUI IMAGENS DE COMIDAS*/
 .food_section .box .img-box img {
   max-width: 100%;
   width: 80%;
