--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,14 @@ a:focus {
 
 }
 
+.hero_area .bg-box #customPortada {
+  width: 100%;
+  color: #e69c00;
+  position: unset;
+  align-items: center;
+  display: block;
+}
+
 .bg-box img {
 
   width: 100%;
@@ -385,6 +393,9 @@ a:focus {
   align-items: center;
 
 }
+
+
+
 
 .slider_section #customCarousel1 {
   width: 100%;
@@ -804,7 +815,7 @@ a:focus {
 }
 
 .book_section .map_container #googleMap {
-  
+
   width: 100%;
 }
 
